--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <img id="slide-image" src="" alt="Slide image">
                 </div>
             </div>
+            <p style="font-size:10px;text-align:center;margin-bottom:-10px;margin-top:40px;">Content created by AndCollective. All rights reserved. Not to be used, reproduced, or distributed without the express written permission of AndCollective.</p>
         </div>
     </div>
     <script src="scripts.js"></script>
